# content-analytics

./: .env  .env.dist  .gitignore  README.md  docker-compose.yml  pyproject.toml
content_analytics/storage/: store_events_simple.py
content_analytics/utils/: config.py  data_model.py
docker/generate/: Dockerfile  requirements.txt
docker/storage/: Dockerfile  requirements.txt
docs/: architecture.md  dev_setup.md  implementation.md
tests/: conftest.py  test_e2e.py  test_generation.py  test_kafka_connection.py  test_parquet_storage.py  test_storage.py
