[tool.poetry]
name = "content-analytics-pipeline"
version = "0.1.0"
description = "A pipeline for processing media analytics events"
packages = [
    { include = "content_analytics" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
kafka-python-ng = "^2.2.3"
pandas = "^2.2.3"
pyarrow = "^19.0.1"
kafka = "^1.3.5"
pydantic-settings = "^2.8.1"
redis = "^5.2.1"
celery = "^5.4.0"
fastparquet = "^2024.11.0"
boto3 = "^1.37.20"
kafka-python = "2.0.2"

[tool.poetry.group.generate.dependencies]
faker = "^37.1.0"
kafka-python-ng = "^2.2.3"
kafka = "^1.3.5"
pydantic-settings = "^2.8.1"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
kafka-python-ng = "^2.2.3"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"